--- a/unit_6/updated html and css/style.css
+++ b/unit_6/updated html and css/style.css
@@ -7,14 +7,17 @@
 	clear: both;
 }
 body {
+	/*background-image: url('images/long_yellow.jpg');
+	background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;*/
 	background-color: #7F645E;
     color: #F9E7F8;
 	font: 16px;
-	font-weight: 100;
 }
 section#home {
-	background-image: url('images/two_girls.jpg');
-	background-size: cover;
+	background-image: url('images/long_red.jpg');
+	background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
 	height:100vh;
@@ -26,63 +29,66 @@ section#home > img {
 	padding-left: 1.5em;
 	padding-top: 1.5em;
 }
-li {
- 	
- 	background-color: black;
- 	width: 6em;
- }
-li, a {
-	color: #F9E7F8;
-	font-size: 1.5em;
- 	font-weight: 400;
+nav li a{
+	color: #7F645E;
 	float: left;
-	font-family: 'Raleway', serif;
-	list-style-type: none;
-    display: block;
+	background-color: #000;
+ 	list-style-type: none;
+ 	margin-top: 1em;
+ 	margin-left: .5em;
+ 	padding: 1em 1.5em;
     text-decoration: none;
     font-style: italic;
+	width: 9em;
+	font-size: 1.5em;
+ 	font-weight: 400;
+	font-family: 'Raleway', serif;
+}
+nav li {
+	display: inline;
+}
+a:hover {
+	background-color: #fff;
 }
 /*li + li {
 	margin-left: .5em;
 }*/
 h1 {
-	font-family: 'Raleway', serif;
-	font-weight: 400;
-	color: #F9E7F8;
+	font-family: 'Megrim', cursive;	font-weight: 400;
+	color: #fff;
 	font-size: 4em;
 }
 h2 {
-	font-family: 'Raleway', serif;
-	font-weight: 400;
-	color: #F9E7F8;
+	font-family: 'Megrim', cursive;	font-weight: 400;
+	color: #fff;
 	font-size: 3em;
 }
 section#home > h1 {
 	padding-top: 7em;
 }
-section#profile {
+/*section#profile {
 	background-image: url('images/model_walking.jpg');
-	background-size: cover;
+	background-size: contain;
     background-repeat: no-repeat;
-    opacity: 50%;
+    opacity: 0.5;
     background-position: center;
 	height:100vh;
 }
+#blurb {
+	color: #F9E7F8;
+	width: 15em;
+	margin: auto
+	border-top: 5em;
+}
 section#profile > h2 {
 	font-size: 2em;
-	padding: 1em;
-	width: 10em;
 }
 section#profile > p {
 	font-family: 'Roboto Slab', serif;
 	font-weight: 100;
-	color: #F9E7F8;
-	float: left;
 	font-size: 1em;
-	padding-left: 2em;
-	width: 20em;
 }
-/*article {
+article {
 	font-family: 'Roboto Slab', serif;
 	font-weight: 100;
 	color: #F9E7F8;
@@ -95,24 +101,16 @@ blockquote {
 	float: left;
 	width: 33.33%;
 }*/
-section#gallery {
-	font-weight: bold;
-	color: #F9E7F8;
-	height:100vh;
-	display: inline-block;
-	margin: 0 auto;
-	padding: 2em;
-}
-img {
+section#gallery img {
 	border-radius:.2em;
-	margin: 1.5%;
+	float:left;
+	padding: 1em;
 	width: 33.33%;
 }
 section#education {
 	font-weight: bold;
 	color: #F9E7F8;
 	padding: 2em 5em;
-	height:100vh;
 }
 #ednav {
 	background-color: #F9E7F8;
@@ -139,7 +137,6 @@ section#consulting {
 	font-weight: bold;
 	color: #F9E7F8;
 	padding: 2em;
-	height: 90vh;
 }
 #consultnav {
 	background-color: #F9E7F8;
@@ -163,7 +160,6 @@ footer {
 	display: block;
 	font-style: normal;
 	font-weight: bold;
-	height:10vh;
 	padding: 0;
 	text-align: center;
 	font-size: .5em;
