--- a/unit_8/style.css
+++ b/unit_8/style.css
@@ -70,11 +70,17 @@ section#profile {
 	font-size: 1.25em;
 	line-height: 1.25em;
 	margin: auto;
-	padding-top: 2em;
+	padding-top: .2em;
 	width: 50%;
 }
+#media {
+	display: none;
+}
+span#main {
+	visibility: visible;
+}
 section#gallery {
-	width: 800px;
+	width: 66.66%;
 	margin: auto;
 }
 img {
@@ -131,7 +137,10 @@ section#education {
 	padding: 2em 5em;
 	width: 50%;
 }
-section#consulting{
+section#education p {
+	visibility: visible;
+}
+section#consulting {
 	float: left;
 	font-size: 1.25em;
 	font-weight: 100;
@@ -152,13 +161,13 @@ section#consulting{
 }
 #footer li {
 	color: #F9E7F8;
-	display: block;
+	display: inline-block;
 	font-style: normal;
 	font-weight: bold;
 	margin: auto;
-	padding: 0;
-	text-align: left;
-	font-size: .5em;
+	padding: 2em;
+	text-align: center;
+	font-size: 1.5em;
 	text-decoration: none;
 	text-transform: uppercase;
 }
@@ -167,43 +176,179 @@ section#consulting{
 	font-size: 2em;
 	padding: 2em 0 5em 0;
 }
+@media only screen and (max-width: 1170px){
+	#footer li {
+		font-size: 1.25em;
+	}
+		p#hidden1 {
+		display: none;
+	}
+	p#hidden2 {
+		display: none;
+	}
+	#education ul{
+		display: none;
+	}
+	#consulting ul {
+		display: none;
+	}
+}
+@media only screen and (max-width: 1085px){
+	#footer li{
+		font-size: 1em;
+	}
+		p#hidden1 {
+		display: none;
+	}
+	p#hidden2 {
+		display: none;
+	}
+		#education ul{
+		display: none;
+	}
+	#consulting ul {
+		display: none;
+	}
+}
+@media only screen and (max-width: 880px){
+	#footer li{
+		font-size: .75em;
+	}
+	p#hidden1 {
+		display: none;
+	}
+	p#hidden2 {
+		display: none;
+	}
+}
 @media only screen and (max-width: 640px){
 	#nav {
 		width:100%;
-	}
-	#h {
-		padding-top: 5em;
-		float: none;
+		padding-bottom: 3em;
 	}
 	section#home {
 		background-image: none;
 	}
 	body{
-		background-color: #000;
+		background-color: #161517;
 }
+	#h {
+		float: none;
+	}
+	section#profile h2 {
+		display: none;
+	}
+	section#profile {
+		padding-top: .5em;
+	}
+	#media {
+		visibility: visible;
+		font-size: 1.25em;
+		color: red;
+	}
+	#main {
+		display: none;
+	}
 	nav li a {
-		width:100%; margin:0 0 1px 0}
+		width:100%; 
+		margin:0 0 1px 0;
 }
 	section#gallery {
 		width:30%; 
-		margin:0 0 1px 0;
-		display: inline;
+		margin: 2em 0;
+		display: inline;	
+}
+	blockquote {
+		display: none;
 	}
+	#quote {
+		display: none;
+	}
+	#education {
+	display: none;	
+	}
+	#consulting {
+	display: none;
+	}
+	#footer {
+		padding: .1em;
+	}
+	#footer li {
+	display: block;
+	font-size: 1em;
+	margin: auto;
+	}
+	li:hover {
+	background-color: #252326;
+}
+}
 @media only screen and (max-width: 499px){
-	#nav {
-		width:100%;
+	#footer {
+		padding: .2em;
 	}
-	#h {
-		float: none;
-		padding: 1em;
+	#footer li {
+	display: block;
+	font-size: .5em;
+	padding: none;
+	margin: auto;
 	}
+	li:hover {
+	background-color: #252326;
+}
 	section#home {
 		background-image: none;
 	}
 	body{ 
-		background-color: #000;
+		background-color: #161517;
 }
-    nav li a {width:100%; margin:0 0 1px 0}
-    ul li a {display:block;}
-    ul li ul{display:none;}
-}
+	#nav {
+		width:100%;
+	}
+	#h h2 {
+		float: none;
+		}
+	section#profile h2 {
+		display: none;
+	}
+	section#profile {
+		padding-top: .5em;
+	}
+	/*section#gallery {
+		padding-top: 2em;
+	}*/
+	#main {
+		display: none;
+	}
+	#media {
+		visibility: visible;
+		font-size: 1.25em;
+		color: red;
+	}
+   #nav nav li a {
+   	width:100%; 
+   	margin:0 0 1px 0
+   }
+   #nav ul li a {
+   	display:block;
+   }
+   #nav ul li ul {
+   	display:none;
+   }
+	blockquote {
+	display: none;
+	}
+	#quote {
+	display: none;
+	}
+	#education {
+	display: none;	
+	}
+	#consulting {
+	display: none;
+	}
+	}
+	@media only screen and (max-width: 320px){
+		#profile p {
+			margin-top: 6em;
+		}
+	}
