--- a/unit_9/style.css
+++ b/unit_9/style.css
@@ -57,7 +57,7 @@ a:hover {
 h1 {
 	font-family: 'Josefin Sans', sans-serif;
 	color: #fff;
-	font-size: 4.5em;
+	font-size: 4em;
 	font-weight: 300;
 	padding-top: 1.25em;
 	text-align: left;
@@ -67,7 +67,8 @@ h2 {
 	font-weight: 300;
 	color: #fff;
 	font-size: 3em;
-	padding-right: 5em
+	text-align: left;
+	padding-left: 2.5em;
 }
 section#profile {
 	font-size: 1.25em;
@@ -181,43 +182,32 @@ section#consulting {
 	font-size: 2em;
 	padding: 2em 0 5em 0;
 }
-@media only screen and (max-width: 1440px){
+/*@media only screen and (max-width: 1440px){
 	h1 {
 		font-size: 5em;
 		padding-top: 2.5em;
 	}
 	h2 {
 		font-size: 4em;
-		padding-right: 7em;
+		text-align: left;
+		padding-left: 2.5em;
 	}
 	nav li a {
 		font-size: 2.25em;
 	}
-}
-@media only screen and (max-width: 1440px){
-	h1 {
-		font-size: 4em;
-		padding-top: 2.5em;
-	}
-	h2 {
-		font-size: 4em;
-		padding-right: 7em;
-	}
-	nav li a {
-		font-size: 2.25em;
-	}
-}
+}*/
 @media only screen and (max-width: 1280px){
 	h1 {
-		font-size: 4.75em;
+		font-size: 4em;
 		padding-top: 1.5em;
 }
 	h2 {
-		font-size: 3.25em;
-		padding-right: 7em
+		font-size: 3em;
+		text-align: left;
+		padding-right: 2em
 }
 	nav li a {
-		font-size: 2em;
+		font-size: 1.75em;
 	}
 }
 @media only screen and (max-width: 1170px){
